--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
       <h1>
         <a href="/">Jafrog's dev blog</a>
         <small>
-          <a href=""><i class="icon-rss"></i></a>
+          <a href="/atom.xml"><i class="icon-rss"></i></a>
           <a href="http://www.twitter.com/jafrog"><i class="icon-twitter"></i></a>
           <a href="http://www.github.com/jafrog"><i class="icon-github"></i></a>
         </small>
@@ -21,8 +21,12 @@
       <div class="span8 offset2">
         {{content}}
       </div>
-      <div class="span2 about">
-        <p>Hi! My name is Irina and I'm a Ruby and Rails programmer from Moscow. Here's something I thought could be interesting.</p>
+      <div class="span2">
+        <p class="about">Hi! My name is Irina and I'm a Ruby and Rails programmer from Moscow. Here's something I thought could be interesting.</p>
+        <a href="mailto:irina.bednova@gmail.com" class="email">
+          <i class="icon-envelope icon-large"></i>
+          Email me
+          </a>
         <img src="/img/flower_gray.png" />
       </div>
     </div>
