--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <div class="well">
-  <h1>
-    {{ page.title }}
-    <small>{{ page.date | date: "%d %B %Y" }}</small>
-  </h1>
+  <div class="date">
+    {{ page.date | date: "%d %B %Y" }}
+  </div>
+  <h1>{{ page.title }}</h1>
   {{content}}
   <a href="/" class="btn">&larr; Back</a>
 
