Just some beauty

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
           <a href="/atom.xml"><i class="icon-rss"></i></a>
           <a href="http://www.twitter.com/jafrog"><i class="icon-twitter"></i></a>
           <a href="http://www.github.com/jafrog"><i class="icon-github"></i></a>
+          <a href="mailto:irina.bednova@gmail.com"><i class="icon-envelope-alt"></i></a>
         </small>
       </h1>
     </div>
@@ -23,10 +24,6 @@
       </div>
       <div class="span2">
         <p class="about">Hi! My name is Irina and I'm a Ruby and Rails programmer from Moscow. Here's something I thought could be interesting.</p>
-        <a href="mailto:irina.bednova@gmail.com" class="email">
-          <i class="icon-envelope icon-large"></i>
-          Email me
-          </a>
         <img src="/img/flower_gray.png" />
       </div>
     </div>
