--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <div class="date">
     {{ page.date | date: "%d %B %Y" }}
   </div>
-  <h1>{{ page.title }}</h1>
+  <h1 class="headline">{{ page.title }}</h1>
   {{content}}
   <a href="/" class="btn">&larr; Back</a>
 
