--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,22 @@
   <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="/css/pygments.css" type="text/css" media="screen" />
   <!-- <script type="text/javascript" src="/bootstrap/js/"></script> -->
+
+  <!-- Google analytics -->
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-30366699-2']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
+
   <title>Jafrog's dev blog</title>
 </head>
 <body>
