Sets up fontawesome for bootstrap

--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,7 @@
 @import "bootstrap/bootstrap.less";
-@import "variables.less";
+@import "bootstrap/font-awesome.less";
 @import "bootswatch.less";
+@import "variables.less";
 
 @font-face {
     font-family: 'JosefinSansStdLight';
@@ -27,7 +28,7 @@
         h1 {
             font-size: 50px;
             a {
-                color: @darkPink;
+                color: @pink;
                 .nohover;
             }
 
