--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="/css/pygments.css" type="text/css" media="screen" />
-  <!-- <script type="text/javascript" src="/bootstrap/js/"></script> -->
+  <link rel="stylesheet" href="/css/font-awesome.css" type="text/css" media="screen" />
 
   <!-- Google analytics -->
   <script type="text/javascript">
@@ -22,25 +22,25 @@
   <title>Jafrog's dev blog</title>
 </head>
 <body>
-  <div class="container-fluid">
-    <div class="row-fluid page-header">
-      <h1>
-        <a href="/">Jafrog's dev blog</a>
-        <small>
-          <a href="/atom.xml"><i class="icon-rss"></i></a>
-          <a href="http://www.twitter.com/jafrog"><i class="icon-twitter"></i></a>
-          <a href="http://www.github.com/jafrog"><i class="icon-github"></i></a>
-          <a href="mailto:irina.bednova@gmail.com"><i class="icon-envelope-alt"></i></a>
-        </small>
-      </h1>
-    </div>
-    <div class="row-fluid">
-      <div class="span8 offset2">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <div class="page-header">
+          <div class="row">
+            <div class="center-block header">
+              <h1><a href="/">Jafrog's dev blog</a></h1>
+            </div>
+            <div class="row">
+              <h4 class="links center-block">
+                <a href="/atom.xml"><i class="fa fa-rss"></i></a>
+                <a href="http://www.twitter.com/jafrog"><i class="fa fa-twitter"></i></a>
+                <a href="http://www.github.com/jafrog"><i class="fa fa-github"></i></a>
+                <a href="mailto:irina.bednova@gmail.com"><i class="fa fa-envelope"></i></a>
+              </h4>
+            </div>
+          </div>
+        </div>
         {{content}}
-      </div>
-      <div class="span2">
-        <p class="about">Hi! My name is Irina and I'm a Ruby and Rails programmer from Moscow. Here's something I thought could be interesting.</p>
-        <img src="/img/flower_gray.png" />
       </div>
     </div>
   </div>
