--- a/less/bootswatch.less
+++ b/less/bootswatch.less
@@ -1,172 +1,79 @@
-// Flatly 3.0.1
+// Readable 3.0.2
 // Bootswatch
 // -----------------------------------------------------
 
-@import url("//fonts.googleapis.com/css?family=Lato:400,700,900,400italic");
+@import url("//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic");
+
+.btn-shadow(@color) {
+	#gradient > .vertical-three-colors(lighten(@color, 10%), @color, 6%, darken(@color, 4%));
+	filter: none;
+	border: 1px solid darken(@color, 10%);
+}
 
 // Navbar =====================================================================
 
-// Buttons ====================================================================
+.navbar {
+	.box-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
 
-.btn:active {
-	.box-shadow(none);
+	&-nav > li > a {
+		padding-top: @navbar-padding-vertical + 6px;
+	}
+
+	&-brand {
+		padding-top: @navbar-padding-vertical + 5px;
+	}
 }
 
-.btn-group.open .dropdown-toggle {
-	.box-shadow(none);
+// Buttons ====================================================================
+
+.btn-default,
+.btn-default:hover {
+	.btn-shadow(@btn-default-bg);
+}
+
+.btn-primary,
+.btn-primary:hover {
+	.btn-shadow(@btn-primary-bg);
+}
+
+.btn-success,
+.btn-success:hover {
+	.btn-shadow(@btn-success-bg);
+}
+
+.btn-info,
+.btn-info:hover {
+	.btn-shadow(@btn-info-bg);
+}
+
+.btn-warning,
+.btn-warning:hover {
+	.btn-shadow(@btn-warning-bg);
+}
+
+.btn-danger,
+.btn-danger:hover {
+	.btn-shadow(@btn-danger-bg);
 }
 
 // Typography =================================================================
 
-.text-primary {
-	color: @brand-primary;
-}
-
-.text-success {
-	color: @brand-success;
-}
-
-.text-danger {
-	color: @brand-danger;
-}
-
-.text-warning {
-	color: @brand-warning;
-}
-
-.text-info {
-	color: @brand-info;
-}
-
 // Tables =====================================================================
 
-.table {
-
-	tr.success,
-	tr.warning,
-	tr.danger {
-		color: #fff;
-	}
-}
-
 // Forms ======================================================================
-
-.form-control,textarea.form-control,
-input[type="text"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
-input[type="email"],
-input[type="url"],
-input[type="search"],
-input[type="tel"],
-input[type="color"],
-.uneditable-input {
-	border-width: 2px;
-	.box-shadow(none);
-
-	&:focus {
-		.box-shadow(none);
-	}
-}
-
-.has-warning {
-	.help-block,
-	.control-label {
-		color: @brand-warning;
-	}
-
-	.form-control,
-	.form-control:focus {
-		border: 2px solid @brand-warning;
-	}
-}
-
-.has-error {
-	.help-block,
-	.control-label {
-		color: @brand-danger;
-	}
-
-	.form-control,
-	.form-control:focus {
-		border: 2px solid @brand-danger;
-	}
-}
-
-.has-success {
-	.help-block,
-	.control-label {
-		color: @brand-success;
-	}
-
-	.form-control,
-	.form-control:focus {
-		border: 2px solid @brand-success;
-	}
-}
 
 // Navs =======================================================================
 
 .pagination {
-	
-	a,
-	a:hover {
-		color: #fff;
-	}
 
-	.disabled {
-		&>a,
-		&>a:hover,
-		&>a:focus,
-		&>span {
-			background-color: lighten(@brand-success, 15%);
-		}
-	}
-}
-
-.pager {
-	a,
-	a:hover {
-		color: #fff;
-	}
-
-	.disabled {
-		&>a,
-		&>a:hover,
-		&>a:focus,
-		&>span {
-			background-color: lighten(@brand-success, 15%);
-		}
+	.active > a,
+	.active > a:hover {
+		border-color: #ddd;
 	}
 }
 
 // Indicators =================================================================
 
-.alert {
-
-	a,
-	.alert-link {
-		color: #fff;
-		text-decoration: underline;
-	}
-}
-
 // Progress bars ==============================================================
 
-.progress {
-	height: 10px;
-	.box-shadow(none);
-}
-
 // Containers =================================================================
-
-.well {
-	.box-shadow(none);
-	border-width: 0;
-}
