--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,4 @@
-// Flatly 3.0.1
+// Readable 3.0.2
 // Variables
 // --------------------------------------------------
 
@@ -10,41 +10,47 @@
 // -------------------------
 
 @gray-darker:            lighten(#000, 13.5%); // #222
-@gray-dark:              #7b8a8b;
-@gray:                   #95a5a6;
-@gray-light:             #b4bcc2;
-@gray-lighter:           #ecf0f1;
+@gray-dark:              lighten(#000, 20%);   // #333
+@gray:                   lighten(#000, 33.5%); // #555
+@gray-light:             lighten(#000, 60%);   // #999
+@gray-lighter:           lighten(#000, 93.5%); // #eee
 
 // Brand colors
 // -------------------------
 
-@brand-primary:         #2C3E50;
-@brand-success:         #18BC9C;
-@brand-warning:         #F39C12;
-@brand-danger:          #E74C3C;
-@brand-info:            #3498DB;
+@brand-primary:         #428bca;
+@brand-success:         #5cb85c;
+@brand-warning:         #f0ad4e;
+@brand-danger:          #d9534f;
+@brand-info:            #5bc0de;
+
+// More colors
+
+@eggplant: #50576a;
+@brightPink: #C02942;
+@darkPink: #542437;
 
 // Scaffolding
 // -------------------------
 
-@body-bg:               #fff;
-@text-color:            @brand-primary;
+@body-bg:               #f9f9f9;
+@text-color:            @eggplant;
 
 // Links
 // -------------------------
 
-@link-color:            @brand-success;
-@link-hover-color:      @link-color;
+@link-color:            @darkPink;
+@link-hover-color:      @brightPink;
 
 // Typography
 // -------------------------
 
-@font-family-sans-serif:  "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-serif:       Georgia, "Times New Roman", Times, serif;
+@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-serif:       "Lora", Georgia, "Times New Roman", Times, serif;
 @font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
-@font-family-base:        @font-family-sans-serif;
+@font-family-base:        @font-family-serif;
 
-@font-size-base:          15px;
+@font-size-base:          17px;
 @font-size-large:         ceil(@font-size-base * 1.25); // ~18px
 @font-size-small:         ceil(@font-size-base * 0.85); // ~12px
 
@@ -59,7 +65,7 @@
 @line-height-computed:    floor(@font-size-base * @line-height-base); // ~20px
 
 @headings-font-family:    @font-family-base;
-@headings-font-weight:    500;
+@headings-font-weight:    bold;
 @headings-line-height:    1.1;
 @headings-color:          inherit;
 
@@ -67,22 +73,22 @@
 // Iconography
 // -------------------------
 
-@icon-font-path:          "/fonts/fontawesome/";
-@icon-font-name:          "FontAwesome";
+@icon-font-path:          "../fonts/";
+@icon-font-name:          "glyphicons-halflings-regular";
 
 
 // Components
 // -------------------------
 // Based on 14px font-size and 1.428 line-height (~20px to start)
 
-@padding-base-vertical:          10px;
-@padding-base-horizontal:        15px;
+@padding-base-vertical:          8px;
+@padding-base-horizontal:        12px;
 
-@padding-large-vertical:         18px;
-@padding-large-horizontal:       27px;
+@padding-large-vertical:         14px;
+@padding-large-horizontal:       16px;
 
-@padding-small-vertical:         6px;
-@padding-small-horizontal:       9px;
+@padding-small-vertical:         5px;
+@padding-small-horizontal:       10px;
 
 @line-height-large:              1.33;
 @line-height-small:              1.5;
@@ -105,10 +111,10 @@
 
 @table-bg:                           transparent; // overall background-color
 @table-bg-accent:                    #f9f9f9; // for striping
-@table-bg-hover:                     @gray-lighter;
+@table-bg-hover:                     #f5f5f5;
 @table-bg-active:                    @table-bg-hover;
 
-@table-border-color:                 @gray-lighter; // table and cell border
+@table-border-color:                 #ddd; // table and cell border
 
 
 // Buttons
@@ -117,7 +123,7 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              #fff;
-@btn-default-bg:                 @gray;
+@btn-default-bg:                 @text-color;
 @btn-default-border:             @btn-default-bg;
 
 @btn-primary-color:              @btn-default-color;
@@ -150,11 +156,11 @@
 @input-bg-disabled:              @gray-lighter;
 
 @input-color:                    @text-color;
-@input-border:                   #dce4ec;
+@input-border:                   #ccc;
 @input-border-radius:            @border-radius-base;
-@input-border-focus:             #1abc9c;
+@input-border-focus:             #66afe9;
 
-@input-color-placeholder:        #acb6c0;
+@input-color-placeholder:        @gray-light;
 
 @input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
 @input-height-large:             (ceil(@font-size-large * @line-height-base) + (@padding-large-vertical * 2) + 2);
@@ -254,23 +260,23 @@
 // -------------------------
 
 // Basics of a navbar
-@navbar-height:                    60px;
+@navbar-height:                    50px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
-@navbar-padding-horizontal:        floor(@grid-gutter-width / 2);  // ~15px
+@navbar-padding-horizontal:        floor(@grid-gutter-width / 2);
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 
-@navbar-default-color:             #777;
-@navbar-default-bg:                @brand-primary;
+@navbar-default-color:             @gray;
+@navbar-default-bg:                @body-bg;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                #fff;
-@navbar-default-link-hover-color:          @brand-success;
+@navbar-default-link-color:                @navbar-default-color;
+@navbar-default-link-hover-color:          @gray-dark;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #fff;
+@navbar-default-link-active-color:         @navbar-default-link-hover-color;
 @navbar-default-link-active-bg:            darken(@navbar-default-bg, 10%);
-@navbar-default-link-disabled-color:       #ccc;
+@navbar-default-link-disabled-color:       #333;
 @navbar-default-link-disabled-bg:          transparent;
 
 // Navbar brand label
@@ -279,36 +285,36 @@
 @navbar-default-brand-hover-bg:            transparent;
 
 // Navbar toggle
-@navbar-default-toggle-hover-bg:           darken(@navbar-default-bg, 10%);
-@navbar-default-toggle-icon-bar-bg:        #fff;
-@navbar-default-toggle-border-color:       darken(@navbar-default-bg, 10%);
+@navbar-default-toggle-hover-bg:           #ddd;
+@navbar-default-toggle-icon-bar-bg:        #ccc;
+@navbar-default-toggle-border-color:       #ddd;
 
 
 // Inverted navbar
 //
 // Reset inverted navbar basics
-@navbar-inverse-color:                      #fff;
-@navbar-inverse-bg:                         @brand-success;
+@navbar-inverse-color:                      @gray-light;
+@navbar-inverse-bg:                         @text-color;
 @navbar-inverse-border:                     darken(@navbar-inverse-bg, 10%);
 
 // Inverted navbar links
-@navbar-inverse-link-color:                 #fff;
-@navbar-inverse-link-hover-color:           @brand-primary;
+@navbar-inverse-link-color:                 @gray-light;
+@navbar-inverse-link-hover-color:           #fff;
 @navbar-inverse-link-hover-bg:              transparent;
-@navbar-inverse-link-active-color:          #fff;
-@navbar-inverse-link-active-bg:             darken(@navbar-inverse-bg, 5%);
+@navbar-inverse-link-active-color:          @navbar-inverse-link-hover-color;
+@navbar-inverse-link-active-bg:             darken(@navbar-inverse-bg, 10%);
 @navbar-inverse-link-disabled-color:        #ccc;
 @navbar-inverse-link-disabled-bg:           transparent;
 
 // Inverted navbar brand label
 @navbar-inverse-brand-color:                @navbar-inverse-link-color;
-@navbar-inverse-brand-hover-color:          @navbar-inverse-link-hover-color;
+@navbar-inverse-brand-hover-color:          #fff;
 @navbar-inverse-brand-hover-bg:             transparent;
 
 // Inverted navbar toggle
-@navbar-inverse-toggle-hover-bg:            darken(@navbar-inverse-bg, 10%);
+@navbar-inverse-toggle-hover-bg:            #333;
 @navbar-inverse-toggle-icon-bar-bg:         #fff;
-@navbar-inverse-toggle-border-color:        darken(@navbar-inverse-bg, 10%);
+@navbar-inverse-toggle-border-color:        #333;
 
 
 // Navs
@@ -324,15 +330,15 @@
 @nav-open-caret-border-color:               #fff;
 
 // Tabs
-@nav-tabs-border-color:                     @gray-lighter;
+@nav-tabs-border-color:                     #ddd;
 
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
 @nav-tabs-active-link-hover-bg:             @body-bg;
 @nav-tabs-active-link-hover-color:          @gray;
-@nav-tabs-active-link-hover-border-color:   @gray-lighter;
+@nav-tabs-active-link-hover-border-color:   #ddd;
 
-@nav-tabs-justified-link-border-color:            @gray-lighter;
+@nav-tabs-justified-link-border-color:            #ddd;
 @nav-tabs-justified-active-link-border-color:     @body-bg;
 
 // Pills
@@ -344,22 +350,22 @@
 // Pagination
 // -------------------------
 
-@pagination-bg:                        @brand-success;
-@pagination-border:                    transparent;
+@pagination-bg:                        #fff;
+@pagination-border:                    #ddd;
 
-@pagination-hover-bg:                  darken(@brand-success, 15%);
+@pagination-hover-bg:                  @gray-lighter;
 
-@pagination-active-bg:                 darken(@brand-success, 15%);
-@pagination-active-color:              #fff;
+@pagination-active-bg:                 #f5f5f5;
+@pagination-active-color:              @gray-light;
 
-@pagination-disabled-color:            @gray-lighter;
+@pagination-disabled-color:            @gray-light;
 
 
 // Pager
 // -------------------------
 
 @pager-border-radius:                  15px;
-@pager-disabled-color:                 #fff;
+@pager-disabled-color:                 @gray-light;
 
 
 // Jumbotron
@@ -367,7 +373,7 @@
 
 @jumbotron-padding:              30px;
 @jumbotron-color:                inherit;
-@jumbotron-bg:                   @gray-lighter;
+@jumbotron-bg:                   darken(@body-bg, 3%);
 @jumbotron-heading-color:        inherit;
 @jumbotron-font-size:            ceil(@font-size-base * 1.5);
 
@@ -375,21 +381,21 @@
 // Form states and alerts
 // -------------------------
 
-@state-success-text:             #fff;
-@state-success-bg:               @brand-success;
-@state-success-border:           @brand-success;
+@state-success-text:             #468847;
+@state-success-bg:               #dff0d8;
+@state-success-border:           darken(spin(@state-success-bg, -10), 5%);
 
-@state-info-text:                #fff;
-@state-info-bg:                  @brand-info;
-@state-info-border:              @brand-info;
+@state-info-text:                #3a87ad;
+@state-info-bg:                  #d9edf7;
+@state-info-border:              darken(spin(@state-info-bg, -10), 7%);
 
-@state-warning-text:             #fff;
-@state-warning-bg:               @brand-warning;
-@state-warning-border:           @brand-warning;
+@state-warning-text:             #c09853;
+@state-warning-bg:               #fcf8e3;
+@state-warning-border:           darken(spin(@state-warning-bg, -10), 3%);
 
-@state-danger-text:              #fff;
-@state-danger-bg:                @brand-danger;
-@state-danger-border:            @brand-danger;
+@state-danger-text:              #b94a48;
+@state-danger-bg:                #f2dede;
+@state-danger-border:            darken(spin(@state-danger-bg, -10), 3%);
 
 
 // Tooltips
@@ -474,7 +480,7 @@
 
 // Progress bars
 // -------------------------
-@progress-bg:                 @gray-lighter;
+@progress-bg:                 #f5f5f5;
 @progress-bar-color:          #fff;
 
 @progress-bar-bg:             @brand-primary;
@@ -487,10 +493,10 @@
 // List group
 // -------------------------
 @list-group-bg:               #fff;
-@list-group-border:           @gray-lighter;
+@list-group-border:           #ddd;
 @list-group-border-radius:    @border-radius-base;
 
-@list-group-hover-bg:         @gray-lighter;
+@list-group-hover-bg:         #f5f5f5;
 @list-group-active-color:     @component-active-color;
 @list-group-active-bg:        @component-active-bg;
 @list-group-active-border:    @list-group-active-bg;
@@ -502,13 +508,13 @@
 // Panels
 // -------------------------
 @panel-bg:                    #fff;
-@panel-inner-border:          @gray-lighter;
+@panel-inner-border:          #ddd;
 @panel-border-radius:         @border-radius-base;
-@panel-footer-bg:             @gray-lighter;
+@panel-footer-bg:             #f5f5f5;
 
-@panel-default-text:          @text-color;
-@panel-default-border:        @gray-lighter;
-@panel-default-heading-bg:    @gray-lighter;
+@panel-default-text:          @gray-dark;
+@panel-default-border:        #ddd;
+@panel-default-heading-bg:    #f5f5f5;
 
 @panel-primary-text:          #fff;
 @panel-primary-border:        @brand-primary;
@@ -535,7 +541,7 @@
 // -------------------------
 @thumbnail-padding:           4px;
 @thumbnail-bg:                @body-bg;
-@thumbnail-border:            @gray-lighter;
+@thumbnail-border:            #ddd;
 @thumbnail-border-radius:     @border-radius-base;
 
 @thumbnail-caption-color:     @text-color;
@@ -544,14 +550,14 @@
 
 // Wells
 // -------------------------
-@well-bg:                     @gray-lighter;
+@well-bg:                     darken(@body-bg, 3%);
 
 
 // Badges
 // -------------------------
 @badge-color:                 #fff;
 @badge-link-hover-color:      #fff;
-@badge-bg:                    @gray;
+@badge-bg:                    @gray-light;
 
 @badge-active-color:          @link-color;
 @badge-active-bg:             #fff;
@@ -563,9 +569,9 @@
 
 // Breadcrumbs
 // -------------------------
-@breadcrumb-bg:               @gray-lighter;
+@breadcrumb-bg:               #f5f5f5;
 @breadcrumb-color:            #ccc;
-@breadcrumb-active-color:     @gray;
+@breadcrumb-active-color:     @gray-light;
 @breadcrumb-separator:        "/";
 
 
@@ -597,7 +603,7 @@
 @code-color:                  #c7254e;
 @code-bg:                     #f9f2f4;
 
-@pre-bg:                      @gray-lighter;
+@pre-bg:                      @gray-darker;
 @pre-color:                   @gray-dark;
 @pre-border-color:            #ccc;
 @pre-scrollable-max-height:   340px;
