--- a/less/style.less
+++ b/less/style.less
@@ -32,4 +32,9 @@
     .headline a:hover { text-decoration: none; }
 }
 
-.bash { color: @gray-lighter; }
+.highlight {
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    .bash { color: @gray-lighter; }
+}
