--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,18 +26,21 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <div class="page-header">
-          <div class="row">
             <div class="center-block header">
+              <img src="/assets/avatar.jpg" class="avatar img-circle" />
               <h1><a href="/">Jafrog's dev blog</a></h1>
-            </div>
-            <div class="row">
-              <h4 class="links center-block">
+              <h4>
                 <a href="/atom.xml"><i class="fa fa-rss"></i></a>
+                <!-- &ndash; -->
+                &bull;
                 <a href="http://www.twitter.com/jafrog"><i class="fa fa-twitter"></i></a>
+                <!-- &ndash; -->
+                &bull;
                 <a href="http://www.github.com/jafrog"><i class="fa fa-github"></i></a>
+                <!-- &ndash; -->
+                &bull;
                 <a href="mailto:irina.bednova@gmail.com"><i class="fa fa-envelope"></i></a>
               </h4>
-            </div>
           </div>
         </div>
         {{content}}
