--- a/css/style.css
+++ b/css/style.css
@@ -6075,27 +6075,44 @@ td.visible-print {
 .header {
   width: 50%;
   text-align: center;
+  color: #999999;
+}
+.header h1 {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+.header h1 a {
+  color: #c02942;
 }
 .header a {
-  color: #c02942;
   font-family: 'Fenix', serif;
+  margin: 2px;
 }
 .header a:hover {
   text-decoration: none;
 }
-.links {
-  width: 50%;
-  text-align: center;
-}
-.links a:hover {
-  text-decoration: none;
+.header img.avatar {
+  max-width: 100px;
+  height: auto;
+  border: 3px #eeeeee solid;
 }
 .index {
-  padding-top: 20px;
-  padding-bottom: 10px;
+  margin-top: 40px;
+  margin-bottom: 60px;
 }
-.index .headline a:hover {
+.index .date {
+  color: #999999;
+}
+.index h3 {
+  margin-top: 10px;
+  margin-bottom: 24px;
+}
+.index h3 a:hover {
   text-decoration: none;
+}
+.well h1 {
+  margin-top: 10px;
+  margin-bottom: 36px;
 }
 .highlight {
   padding-top: 10px;
