--- a/less/style.less
+++ b/less/style.less
@@ -5,36 +5,61 @@
 @import url(http://fonts.googleapis.com/css?family=Fenix);
 
 .centered() {
-    width: 50%;
-    text-align: center;
+  width: 50%;
+  text-align: center;
 }
 
 .header {
-    .centered;
+  .centered;
+  color: @gray-light;
 
-    a {
-        color: @brightPink;
-        font-family: 'Fenix', serif;
+  h1 {
+    margin-top: 16px;
+    margin-bottom: 16px;
 
-        &:hover { text-decoration: none; }
-    }
-}
+    a { color: @brightPink; }
+  }
 
-.links {
-    .centered;
-    a:hover { text-decoration: none; }
+  a {
+    font-family: 'Fenix', serif;
+    margin: 2px;
+
+    &:hover { text-decoration: none; }
+  }
+
+  img.avatar {
+    max-width: 100px;
+    height: auto;
+    border: 3px @gray-lighter solid;
+  }
 }
 
 .index {
-    padding-top: 20px;
-    padding-bottom: 10px;
+  margin-top: 40px;
+  margin-bottom: 60px;
 
-    .headline a:hover { text-decoration: none; }
+  .date {
+    color: @gray-light;
+  }
+
+  h3 {
+    margin-top: 10px;
+    margin-bottom: 24px;
+
+    a:hover { text-decoration: none; }
+  }
+}
+
+.well {
+  h1 {
+    margin-top: 10px;
+    margin-bottom: 36px;
+  }
 }
 
 .highlight {
-    padding-top: 10px;
-    padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
-    .bash { color: @gray-lighter; }
+  .bash { color: @gray-lighter; }
 }
