--- a/less/variables.less
+++ b/less/variables.less
@@ -18,9 +18,13 @@
 // Brand colors
 // -------------------------
 
-@heading: #CC3917;
+@heading-title: #12495D;
+@heading-btn: #BE890A;
+@dark: #0A0A09;
+@emph: #A93A03;
+@emph-bg: #f2ecda;
 
-@brand-primary:         #5A7F78;
+@brand-primary:         #A93A03;
 @brand-success:         #43ac6a;
 @brand-warning:         #E99002;
 @brand-danger:          #F04124;
@@ -29,8 +33,8 @@
 // Scaffolding
 // -------------------------
 
-@body-bg:               #F7F8FC;
-@text-color:            #010300;
+@body-bg:               #f2efe6;
+@text-color:            @dark;
 
 // Links
 // -------------------------
@@ -601,8 +605,8 @@
 
 // Code
 // ------------------------
-@code-color:                  #314C53;
-@code-bg:                     #BBDEC6;
+@code-color:                  @emph;
+@code-bg:                     @emph-bg;
 
 @pre-bg:                      @gray-dark;
 @pre-color:                   @gray-dark;
